--- a/openpoiservice/server/ops_settings.yml
+++ b/openpoiservice/server/ops_settings.yml
@@ -8,4 +8,9 @@ maximum_search_radius_for_points: 20000
 maximum_search_radius_for_polygons: 1000
 provider_parameters:
   table_name: ops_planet_pois
+  db_name: gis
+  user_name: gis_admin
+  password: admin
+  host: localhost
+  port: 5433
 response_limit: 1000
