--- a/openpoiservice/server/ops_settings.yml
+++ b/openpoiservice/server/ops_settings.yml
@@ -30,19 +30,19 @@ column_mappings:
   # https://wiki.openstreetmap.org/wiki/Key:fee
   fee:
     common_values: ['yes','no', 'str']
-    query_type: 'any'
+    query_type: 'equals'
   # https://wiki.openstreetmap.org/wiki/Key:opening_hours
   opening_hours:
     common_values: ['str']
-    query_type: 'any'
+    query_type: 'false'
   # https://wiki.openstreetmap.org/wiki/Key:phone
   phone:
     common_values: ['str']
-    query_type: 'any'
+    query_type: 'false'
   # https://wiki.openstreetmap.org/wiki/Key:website
   website:
     common_values: ['str']
-    query_type: 'any'
+    query_type: 'false'
 
 
 response_limit: 1000
