--- a/openpoiservice/server/ops_settings.yml
+++ b/openpoiservice/server/ops_settings.yml
@@ -11,8 +11,9 @@ maximum_area: 25000
 maximum_linestring_length: 500000
 # limit of pois
 response_limit: 2000
-osm_file: bremen-tests.pbf
-osm_file_tests: bremen-tests.pbf
+osm_file: bremen-latest.osm.pbf
+osm_file_tests: bremen-tests.osm.pbf
+
 provider_parameters:
   table_name: ops_planet_pois
   db_name: gis
