- Changes to Dockerfile, now using ubuntu 17.10 due to protoc - Changes in folder structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '2'
+version: '3'
 services:
- openpoiservice-flask:
+ gunicorn_flask:
   build: .
-  #volumes:
-  #- ./:/var/www/crypto
+  volumes:
+  - ./osm:/deploy/app/osm
   ports:
    - "5000:5000"
