--- a/openpoiservice/server/ops_settings.yml
+++ b/openpoiservice/server/ops_settings.yml
@@ -13,7 +13,7 @@ maximum_linestring_length: 500000
 response_limit: 2000
 osm_files: ['bremen-latest.osm.pbf', 'berlin-latest.osm.pbf', 'austria-latest.osm.pbf']
 #osm_files: ['bremen-latest.osm.pbf']
-osm_file_tests: bremen-tests.osm.pbf
+osm_file_tests: ['bremen-tests.osm.pbf']
 
 provider_parameters:
   table_name: ops_planet_pois
