--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: python
 
 python:
-  - "3.6"
-  - "3.5"
-  - "3.4"
   - "2.7"
 
 install:
   - pip install -r requirements.txt
-  - pip install coveralls
+  #- pip install coveralls
 
 script:
-  - python manage.py cov
+  - python manage.py test
