--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: python
 python:
   - "2.7"
 
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install -y build-essential protobuf-compiler libprotobuf-dev
+
 install:
   - pip install -r requirements.txt
   #- pip install coveralls
