--- a/openpoiservice/server/ops_settings.yml
+++ b/openpoiservice/server/ops_settings.yml
@@ -22,6 +22,8 @@ provider_parameters:
   password: admin
   host: localhost
   port: 5433
+  port_tests: 5432
+
 column_mappings:
   # https://wiki.openstreetmap.org/wiki/Key:name
   name:
