Imports any pbf file in osm folder

--- a/ops_settings_docker.yml
+++ b/ops_settings_docker.yml
@@ -6,13 +6,12 @@ maximum_search_radius_for_linestrings: 2000
 maximum_search_radius_for_points: 2000
 maximum_search_radius_for_polygons: 2000
 # square meters
-maximum_area: 25000
+maximum_area: 50000000
 # meters
 maximum_linestring_length: 500000
 # limit of pois
 response_limit: 2000
-osm_file: bremen-latest.osm.pbf
-osm_file_tests: bremen-tests.osm.pbf
+osm_file_tests: ['bremen-tests.osm.pbf']
 
 provider_parameters:
   table_name: ops_planet_pois
@@ -21,7 +20,6 @@ provider_parameters:
   password: admin
   host: localhost
   port: 5433
-  port_tests: 5432
 column_mappings:
   # https://wiki.openstreetmap.org/wiki/Key:name
   name:
