--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,11 @@ Flask-Testing==0.6.2
 psycopg2==2.7.3.2
 PyYAML==3.12
 GeoAlchemy2==0.4.2
-imposm.parser==1.0.7
 voluptuous==0.10.5
 geojson==2.3.0
 shapely==1.6.4
 flasgger==0.8.1
 pyproj==1.9.5.1
 scrapy==1.5.0
-guppy==0.1.10
-blist==1.3.6
+gunicorn==19.7.1
+git+https://github.com/lechup/imposm-parser.git@python3
