Updated API documentation

--- a/openpoiservice/server/api/pois_post.yml
+++ b/openpoiservice/server/api/pois_post.yml
@@ -74,7 +74,16 @@ securityDefinitions:
     in: "query"
 definitions:
   LocationsBodyPois:
-    example: "{1: 1}"
+    example: {
+      "request": "pois",
+      "geometry": {
+          "bbox": [
+              [8.74189636230469, 53.07144289415349],
+              [8.814767341613771, 53.091060308703845]
+          ]
+      },
+      "limit": 200
+    }
     type: object
     required:
       - request
@@ -121,7 +130,7 @@ definitions:
     properties:
       request:
         type: string
-        example: category_stats
+        example: stats
       geometry:
         type: object
         properties:
@@ -155,7 +164,7 @@ definitions:
     properties:
       request:
         type: string
-        example: category_list
+        example: list
     title: "Openpoiservice category list"
 
   # SHARED PROPERTIES
@@ -199,12 +208,8 @@ definitions:
     description: The pattern for this bbox string is minlon,minlat,maxlon,maxlat
 
   geojson:
-    description: This is a geojson object
+    description: This is a GeoJSON object. Is either Point, Polygon or LineString.
     type: object
-    example: '"geometry": {
-      "type": "Point",
-      "coordinates": [125.6, 10.1]
-    }'
   # SHARED CUSTOM PROPERTIES
   name:
     description: Filter by name of the poi object.
@@ -293,8 +298,10 @@ definitions:
         type: "string"
         default: "Feature"
       geometry:
+        type: "object"
         $ref: "#/definitions/location_features_geometry"
       feature_properties:
+        type: "object"
         $ref: "#/definitions/location_features_properties"
     title: "GeoJSON features object"
 
@@ -313,13 +320,34 @@ definitions:
     title: "GeoJSON geometry object"
 
   location_features_properties:
+    title: "GeoJSON properties object"
     properties:
       osm_id:
         type: "number"
       osm_type:
         type: "number"
+      distance:
+        type: "number"
+      category_ids:
+        type: "object"
+        $ref: "#/definitions/location_features_properties_category_ids"
+      osm_tags:
+        type: "object"
+        $ref: "#/definitions/location_features_properties_osm_tags"
+
+  location_features_properties_category_ids:
+    properties:
       category_id:
-        type: "string"
+        type: "object"
+        properties:
+          category_name:
+            type: "string"
+          category_group:
+            type: "number"
+
+  location_features_properties_osm_tags:
+    type: "object"
+    properties:
       name:
         type: "string"
       address:
@@ -334,4 +362,4 @@ definitions:
         type: "string"
       fee:
         type: "string"
-    title: "GeoJSON properties object"
+
